[package]

name = "transporter"
version = "0.8.0"
authors = ["Roey Darwish Dror <roey.ghost@gmail.com>"]

[dependencies]
byteorder = {version = "1.3.1"}
clap = {version = "2.33.0"}
fern = {version = "0.5.8"}
log = {version = "0.4.6"}
serde = {version = "1.0.91"}
serde_json = {version = "1.0.39"}
serde_derive = {version = "1.0.91"}
url = {version = "1.7.2"}
reqwest = {version = "0.9"}
time = {version = "0.1.42"}
rust-crypto = {version = "0.2.36"}
quick-error = {version = "*"}
regex = {version = "1.5.5"}
sentry = {version = "0.15.4"}
openssl-probe = {version = "0.1.2"}
